--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.0.4'
     implementation 'com.google.firebase:firebase-storage:11.0.4'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -34,9 +35,6 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
-
-
-
 
 
 
